--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swiper": "^10.0.4",
     "typescript": "5.1.3"
   },
   "devDependencies": {
