--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "18.2.10",
     "@types/react-dom": "18.2.4",
     "contentful": "^10.3.1",
+    "dayjs": "^1.11.9",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
