--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-CONTENTFUL_ACCESS_TOKEN="g5D7jCRYpGS6M9nEEax2o7MWIVQuPdk8rCfKYAaE-nc"
-CONTENTFUL_SPACE_ID="x5yulb03v0z7"
+NEXT_PUBLIC_CONTENTFUL_ACCESS_TOKEN="g5D7jCRYpGS6M9nEEax2o7MWIVQuPdk8rCfKYAaE-nc"
+NEXT_PUBLIC_CONTENTFUL_SPACE_ID="x5yulb03v0z7"
