--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dayjs": "^1.11.9",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "lottie-react": "^2.4.0",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
